2003-02-15  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCglue.h: make tmpfileNameSet available for preOutName
	* src/SDCCmain.c (preProcess): make sure, that preOutName will be deleted;
	make -V work again; --c1mode reads now from stdin
	* doc/sdccman.lyx: added --c1mode
	* support/Util/SDCCerr.c: new messages for c1 mode
	* support/Util/SDCCerr.h: new messages for c1 mode
	* src/SDCC.lex (checkCurrFile): test if fullSrcFileName is NULL for c1mode

2003-02-15    <johan@balder>

	* src/asm.c: new options: --no-c-code-in-asm and --i-code-in-asm

2003-02-14  Bernhard Held <bernhard@bernhardheld.de>

	* doc/sdccman.lyx: Environment variables, -o and other minor things

2003-02-14    <johan@balder>

	* src/xa51/main.c: before anyone really tries to use it :)

	* Install doc's in share/sdcc/doc
	* removed some obsolete files
	* Do a proper make distclean and uninstall
	M Makefile.common.in
	R sdccbuild.sh
	M as/Makefile
	M device/include/Makefile.in
	M device/lib/Makefile.in
	M doc/sdccman.lyx
	M link/Makefile
	M sim/ucsim/doc/Makefile.in
	M src/clean.mk
	R src/avr/peeph.rul
	R src/xa51/peeph.rul
	M support/cpp2/Makefile.in
	M support/makebin/Makefile


2003-02-13  Bernhard Held <bernhard@bernhardheld.de>

	* support/regression/ports/host/spec.mk: use cc as host compiler for max osx

2003-02-10  Borut Razem <borut.razem@siol.net>

	* doc/bccinst.txt, packihx/packihx.c, sdcc_vc_in.h, src/SDCCset.h,
	support/cpp2/config.in: Borland C++ build doesn't depend on Cygwin configure
	* Bcc.ini, Makefile.bcc, as/mcs51/Makefile.bcc,
	device/examples/ds390/tinitalk/Makefile.bcc, packihx/Makefile.bcc,
	support/cpp2/Makefile.bcc, src/Makefile.bcc, src/avr/Makefile.bcc,
	src/ds390/Makefile.bcc, src/izt/Makefile.bcc, src/mcs51/Makefile.bcc,
	src/pic/Makefile.bcc, src/pic16/Makefile.bcc, src/xa15/Makefile.bcc,
	src/z80/Makefile.bcc: Borland Makefile cleanup
	* as/z80/Makefile.bcc: Added Borland Makefile
	* support/cpp2/borland.h: Removed
