@@ -1,3 +1,4 @@
+#!/bin/sh
 if [ -f ${1}/devel ]; then
 	shift
 	echo "$@"
